# stock-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/thesis-tracking/: SKILL.md
data/: watchlist.csv  watchlist_backup.csv
docs/superpowers/plans/: 2026-06-17-daily-market-overview.md  2026-06-17-deep-fundamental-profile.md  2026-06-27-backtest-validation.md
docs/superpowers/specs/: 2026-06-16-daily-market-overview-design.md  2026-06-17-deep-fundamental-profile-design.md  2026-06-27-backtest-validation-design.md
notebooks/: thesis_tracking.ipynb
src/stockanalysis/: __init__.py  __main__.py  backtest.py  charts.py  cli.py  config.py  indicators.py  ingest.py  overview.py  pipeline.py  profile.py  screener.py  signals.py
src/stockanalysis/outputs/: __init__.py  backtest_excel.py  base.py  excel.py  gsheets.py
src/stockanalysis/thesis/: README.md  __init__.py  cli.py  model.py  report.py  review.py  sources.py  store.py
tests/: conftest.py  test_backtest.py  test_backtest_outputs.py  test_cli_backtest.py  test_cli_thesis.py  test_config.py  test_excel_exporter.py  test_indicators.py  test_ingest.py  test_pipeline.py  test_screener.py  test_signals.py  test_thesis_model.py  test_thesis_report.py  test_thesis_review.py  test_thesis_sources.py  test_thesis_store.py
